--- a/README
+++ b/README
@@ -11,8 +11,8 @@ DESCRIPTION
     does the opposite of what Dist::Zilla::Plugin::CPANFile does, which is
     to *create* a "cpanfile" using the prereqs collected elsewhere.
 
-    DO NOT USE THIS PLUGIN IN COMBINATION WITH Plugin::CPANFile. I'm sure
-    there will be a disaster if you do.
+    DO NOT USE THIS PLUGIN IN COMBINATION WITH Plugin::CPANFile. You will
+    probably be complained about creating duplicate files from dzil.
 
 AUTHOR
     Tatsuhiko Miyagawa <miyagawa@bulknews.net>
