Checking in changes prior to tagging of version 0.02.
Changelog diff is:

diff --git a/Changes b/Changes
index bb73df4..21ad072 100644
--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Dist::Zilla::Plugin::Prereqs::FromCPANfile

+0.02  Tue Mar 19 16:30:43 PDT 2013
+        - Silent log when there's no cpanfile
+
 0.01  Tue Mar 19 14:27:58 2013
         - original version

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Dist::Zilla::Plugin::Prereqs::FromCPANfile
 
+0.02  Tue Mar 19 16:30:43 PDT 2013
+        - Silent log when there's no cpanfile
+
 0.01  Tue Mar 19 14:27:58 2013
         - original version
